--- a/next-portfolio/package.json
+++ b/next-portfolio/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "lucide-react": "^0.552.0",
     "next": "15.5.4",
     "next-intl": "^4.3.12",
     "react": "19.1.0",
