--- a/next-portfolio/vercel.json
+++ b/next-portfolio/vercel.json
@@ -1,12 +1,8 @@
 {
   "rewrites": [
-    {
-      "source": "/email-form/(.*)",
-      "destination": "https://email-form-tau-three.vercel.app/$1"
-    },
-    {
-      "source": "/(pl|en|de|fr)/email-form/(.*)",
-      "destination": "https://email-form-tau-three.vercel.app/$2"
-    }
+    { "source": "/email-form", "destination": "https://email-form-tau-three.vercel.app/" },
+    { "source": "/email-form/(.*)", "destination": "https://email-form-tau-three.vercel.app/$1" },
+    { "source": "/(pl|en|de|fr)/email-form", "destination": "https://email-form-tau-three.vercel.app/" },
+    { "source": "/(pl|en|de|fr)/email-form/(.*)", "destination": "https://email-form-tau-three.vercel.app/$2" }
   ]
 }
